syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

import "Messages/Types.proto";

message OrderOnlineValuationRequest {
    int32 RealEstateValuationId = 1;
    
    LocalSurveyData LocalSurveyDetails = 2;
}
